--- a/tasks/init_cfme.yml
+++ b/tasks/init_cfme.yml
@@ -3,7 +3,7 @@
   service: name=firewalld state=stopped enabled=no
 
 - name: db create
-  command: bundle exec rake db:create:all chdir=$vmdb_dir
+  command: bundle exec bin/rake db:create:all chdir=$vmdb_dir
 
 - name: db migrate
-  command: bin/rake db:migrate chdir=$vmdb_dir
+  command: bundle exec bin/rake db:migrate chdir=$vmdb_dir
