--- a/tasks/ruby_setup.yml
+++ b/tasks/ruby_setup.yml
@@ -1,74 +1,75 @@
 - name: clone rbenv
-  git: repo=git://github.com/sstephenson/rbenv.git dest=$ENV(HOME)/$rbenv_dir force=no
+  git: repo=git://github.com/sstephenson/rbenv.git dest=$ENV(HOME)/$rbenv_dir 
 
 - name: clone ruby rbenv-gemset
-  git: repo=git://github.com/jamis/rbenv-gemset.git dest=$ENV(HOME)/$rbenv_dir/plugins force=no
+  git: repo=git://github.com/jamis/rbenv-gemset.git dest=$ENV(HOME)/$rbenv_dir/plugins/rbenv-gemset 
+
+- name: clone ruby-build
+  git: repo=https://github.com/sstephenson/ruby-build.git dest=$ENV(HOME)/$rbenv_dir/plugins/ruby-build 
 
 - name: copy rbenv install script
-  template: src=templates/ruby_install.sh.j2 dest=/tmp/ruby_install.sh owner=$ENV(USER) mode=0755
+  template: src=templates/ruby_install.sh.j2 dest=$ENV(HOME)/ruby_install.sh owner=$ENV(USER) mode=0755
 
 - name: copy gemset create script
-  template: src=templates/gemset_create.sh.j2 dest=/tmp/gemset_create.sh owner=$ENV(USER) mode=0755
-
-#- name: copy bash_profile
-#  template: src=templates/bash_profile.j2 dest=/tmp/bash_profile owner=$ENV(USER) 
+  template: src=templates/gemset_create.sh.j2 dest=$ENV(HOME)/gemset_create.sh owner=$ENV(USER) mode=0755
 
 - name: copy cfme aliases
   template: src=templates/cfme_aliases.sh.j2 dest=/etc/profile.d/cfme_aliases.sh
               owner=root group=root mode=0755 
 
   # should not be necessary if rbenv path setup properly
-- name: install rbenv-gemset to /usr/local/bin
-  file: src=$ENV(HOME)/$rbenv_dir/plugins/libexec/$item dest=/usr/local/bin/$item state=link
-  with_items:
-    - rbenv-gemset
-    - rbenv-gemset-active
-    - rbenv-gemset-create
-    - rbenv-gemset-delete
-    - rbenv-gemset-file
-    - rbenv-gemset-list
-
-- name: clone ruby-build
-  git: repo=https://github.com/sstephenson/ruby-build.git dest=$ENV(HOME)/$rbenv_dir/plugins/ruby-build force=no
+#- name: install rbenv-gemset to /usr/local/bin
+#  file: src=$ENV(HOME)/$rbenv_dir/plugins/libexec/$item dest=/usr/local/bin/$item state=link
+#  with_items:
+#    - rbenv-gemset
+#    - rbenv-gemset-active
+#    - rbenv-gemset-create
+#    - rbenv-gemset-delete
+#    - rbenv-gemset-file
+#    - rbenv-gemset-list
 
 - name: update $ENV(HOME)/$profile
   lineinfile: dest=$ENV(HOME)/$profile regexp='' insertafter=EOF
                 line="export PATH=$HOME/$rbenv_dir/bin:$PATH\neval \"$(rbenv init -)\""
 
+# not useful/effective in this context?
 - name: source path
   #shell: sudo -iu $ENV(USER) source $ENV(HOME)/$profile 
   #shell: bash -lc '$ENV(HOME)/$profile' 
   shell: . $ENV(HOME)/$profile 
 
 - name: install ruby
-  shell: bash -lc '$item' creates=$ENV(HOME)/.rbenv/versions/$ruby_ver/bin/ruby
-  with_items:
-    - rbenv install $ruby_ver
-    - rbenv rehash
-    - rbenv local $ruby_ver
-    - rbenv shell $ruby_ver
-    - rbenv rehash
+  shell: $ENV(HOME)/ruby_install.sh creates=$ENV(HOME)/$rbenv_dir/versions/$ruby_ver/bin/ruby
+  #shell: bash -lc '$item' creates=$ENV(HOME)/.rbenv/versions/$ruby_ver/bin/ruby
+  #with_items:
+  #  - rbenv install $ruby_ver
+  #  - rbenv rehash
+  #  - rbenv local $ruby_ver
+  #  - rbenv shell $ruby_ver
+  #  - rbenv rehash
 
-- name: set local ruby_ver for $vmdb_dir
-  shell: bash -lc "rbenv rehash && rbenv local $ruby_ver" chdir=$vmdb_dir creates=$vmdb_dir/.ruby-version
+#- name: set local ruby_ver for $vmdb_dir
+#  shell: bash -lc "rbenv rehash && rbenv local $ruby_ver" chdir=$vmdb_dir creates=$vmdb_dir/.ruby-version
+
 
 - name: gem install bundler
   gem: name=bundler state=present version=$bundler_ver
 
 - name: gemset create
-  shell: bash -lc 'rbenv rehash && rbenv gemset create $ruby_ver cfme' creates=$ENV(HOME)/$rbenv_dir/versions/$ruby_ver/gemsets/cfme
+  #shell: bash -lc 'rbenv rehash && rbenv gemset create $ruby_ver cfme' creates=$ENV(HOME)/$rbenv_dir/versions/$ruby_ver/gemsets/cfme
+  shell: $ENV(HOME)/gemset_create.sh
 
-- name: install gemset cfme local
-  shell: bash -lc '>.rbenv-gemsets <<<cfme' creates=$vmdb_dir/.rbenv-gemsets 
-           chdir=$ENV(HOME)/$rbenv_dir/versions/$ruby_ver/gemsets/cfme
+#- name: install gemset cfme local
+#  shell: bash -lc '>.rbenv-gemsets <<<cfme' creates=$vmdb_dir/.rbenv-gemsets 
+#           chdir=$ENV(HOME)/$rbenv_dir/versions/$ruby_ver/gemsets/cfme
 
-- name: install gemset cfme $vmdb_dir 
-  shell: bash -lc '$item' chdir=$vmdb_dir
-  with_items:
-    - ">.rbenv-gemsets <<<cfme"
-    - rbenv gemset active
-    - rbenv rehash
+#- name: install gemset cfme $vmdb_dir 
+#  shell: bash -lc '$item' chdir=$vmdb_dir
+#  with_items:
+#    - ">.rbenv-gemsets <<<cfme"
+#    - rbenv gemset active
+#    - rbenv rehash
 
 - name: bundle install
-  shell: bash -lc 'bundle install --without metric_fu:sqlserver:qpid' chdir=$vmdb_dir
+  shell: ash -lc 'bundle install --without metric_fu:sqlserver:qpid' chdir=$vmdb_dir
 
