--- a/cfme.yml
+++ b/cfme.yml
@@ -25,6 +25,7 @@
         ruby_ver: 1.9.3-p327
         profile: .bash_profile
         bundler_ver: 1.1.3
+        bundle_opts: --without metric_fu:sqlserver:qpid
         gemset: cfme
   - include: tasks/init_cfme.yml
   handlers:
