--- a/tasks/init_cfme.yml
+++ b/tasks/init_cfme.yml
@@ -11,8 +11,12 @@
 - name: ensure firewalld
   service: name=firewalld state=started enabled=yes
 
-- name: db create
-  command: rake db:create:all chdir=$vmdb_dir
+- name: copy rake tasks script
+  template: src=templates/rake_tasks.sh.j2 dest=$ENV(HOME)/rake_tasks.sh owner=$ENV(USER) mode=0755
 
-- name: db migrate
-  command: bin/rake db:migrate chdir=$vmdb_dir
+- name: db create
+  #command: rake db:create:all chdir=$vmdb_dir
+  shell: $ENV(HOME)/rake_tasks.sh
+
+#- name: db migrate
+#  command: bin/rake db:migrate chdir=$vmdb_dir
