Add support for vmware_vddk installation
Unless vmware_vddk_url is defined, tasks within 'tasks/vmware_vddk.yml'
will be skipped.  If 'vmware_vddk_url' is defined in groups/all (or via
--extra-vars), the vmware vddk toolkit will be downloaded and installed.

--- a/site.yml
+++ b/site.yml
@@ -55,5 +55,8 @@
    - include: tasks/cfme_setup.yml
      when: is_cfme_rpm_installed|failed
 
+   - include: tasks/vmware_vddk.yml
+     when: vmware_vddk_url is defined and vmware_vddk_url is string
+
   handlers:
    - include: handlers/restart_services.yml
